--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "mongoose": "^8.9.3",
+    "morgan": "^1.10.0",
     "request-ip": "^3.3.0"
   },
   "devDependencies": {
