--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express-rate-limit": "^7.5.0",
     "mongoose": "^8.9.3",
     "morgan": "^1.10.0",
-    "request-ip": "^3.3.0"
+    "request-ip": "^3.3.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
