--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
-    "mongoose": "^8.9.3",
+    "geoip-lite": "^1.4.10",
+    "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
     "request-ip": "^3.3.0",
+    "useragent": "^2.3.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
