--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "geoip-lite": "^1.4.10",
+    "helmet": "^8.0.0",
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
     "request-ip": "^3.3.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "useragent": "^2.3.0",
     "winston": "^3.17.0"
   },
