feat: Implement email insights feature with scheduling capabilities
- Updated package dependencies:
  - Upgraded dotenv to version 16.5.0
  - Upgraded helmet to version 8.1.0
  - Upgraded mongoose to version 8.15.1
  - Added node-cron for scheduling tasks
  - Added nodemailer for sending emails
  - Upgraded nodemon to version 3.1.10

- Created emailController to handle sending daily insights and testing email configuration.
- Developed emailService for generating HTML reports and sending emails.
- Implemented schedulerService to manage daily insights scheduling with cron expressions.
- Added routes for email insights, scheduler management, and cron expression retrieval.
- Integrated Swagger documentation for API endpoints.
- Added validation for email recipients and cron expressions.
- Implemented logging for better error tracking and debugging.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,23 @@
+# Server Configuration
 PORT=3000
+
+# Database Configuration
 MONGO_URI=mongodb://localhost:27017/visitorTracking
+
+# Email Configuration
+EMAIL_SERVICE=gmail
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASSWORD=your-app-password
+
+# Daily Insights Configuration
+EMAIL_RECIPIENTS=admin@example.com,manager@example.com
+DEFAULT_EMAIL_RECIPIENT=admin@example.com
+DAILY_INSIGHTS_CRON=0 9 * * *
+TIMEZONE=UTC
+
+# Rate Limiting
+RATE_LIMIT_WINDOW=15
+RATE_LIMIT_MAX=100
+
+# Logging
+LOG_LEVEL=info
