--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "geoip-lite": "^1.4.10",
-    "helmet": "^8.0.0",
-    "mongoose": "^8.9.5",
+    "helmet": "^8.1.0",
+    "mongoose": "^8.15.1",
     "morgan": "^1.10.0",
+    "node-cron": "^4.1.0",
+    "nodemailer": "^7.0.3",
     "request-ip": "^3.3.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
@@ -32,6 +34,6 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.10"
   }
 }
